# sglang-rs

./: .clang-format  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  cuda-acceptance.yml
crates/sglang-kernel/: Cargo.toml
crates/sglang-kernel/src/: cpu.rs  cublas.rs  cuda.rs  cuda_attention.rs  cuda_bf16_kernels.rs  cuda_hybrid_kernels.rs  cuda_kernels.rs  cuda_kv_kernels.rs  cuda_linear_attention.rs  cuda_mla.rs  cuda_w4a16.rs  lib.rs  nccl.rs  nvrtc.rs  rotary.rs
crates/sglang-kernel/tests/: cpu_kernels.rs  cuda_hybrid_kernels.rs  cuda_linear_attention.rs  cuda_mla.rs  (+2 more)
crates/sglang-router/: BENCHMARKS.md  Cargo.toml  README.md
crates/sglang-srt/: Cargo.toml  build.rs
crates/sglang-srt/build_support/: mooncake_link.rs
crates/sglang-srt/src/: backend.rs  backend_model.rs  cache.rs  cli.rs  compressed_tensors.rs  cpu_hybrid.rs  cpu_reference.rs  cuda_attention.rs  cuda_dense_decoder.rs  cuda_execution_resources.rs  cuda_hybrid_decoder.rs  cuda_kv_cache.rs  cuda_mla.rs  cuda_moe.rs  cuda_recurrent_state.rs  cuda_runtime.rs  cuda_tensor_parallel.rs  cuda_transformer.rs  deepseek_runtime.rs  engine.rs  engine_info_bootstrap.rs  glm_runtime.rs  grpc.rs  grpc_sidecar.rs  http.rs  kv_cache.rs  lib.rs  model_artifacts.rs  model_executor.rs  model_registry.rs  model_runtime.rs  moe.rs  openai_classify.rs  openai_embedding.rs  openai_id.rs  openai_rerank.rs  openai_score.rs  parallel.rs  pd_bootstrap.rs  profile.rs  (+15 more)
crates/sglang-srt/src/models/: deepseek.rs  embedding.rs  glm.rs  kimi_k25.rs  kimi_linear.rs  mla_moe_weights.rs  mod.rs  qwen.rs  qwen3_5.rs
crates/sglang-srt/tests/: architecture_boundaries.rs  backend_capabilities.rs  cache_allocator.rs  cli_args.rs  cuda_attention.rs  cuda_backend.rs  cuda_inference.rs  cuda_kv_cache.rs  cuda_worker_group.rs  decode_loop.rs  deepseek_runtime.rs  glm_runtime.rs  grpc_proto.rs  grpc_server.rs  http_server.rs  kv_block_hash.rs  kv_cache.rs  model_artifacts.rs  model_worker_batch.rs  mooncake_link_build.rs  pd_bootstrap.rs  pd_bootstrap_server.rs  pd_config.rs  pd_separation.rs  pd_transfer_plan.rs  radix_cache.rs  request_lifecycle.rs  router_protocol.rs  scheduler_batch.rs  scheduler_cache_allocation.rs  server_bootstrap.rs  sglang_command.rs  tokenizer_loader.rs
crates/sglang-srt/tests/support/: compressed_kimi_k25.rs
docs/: backend-capabilities.md  backend-implementation-standards.md
scripts/: run_cpu_pd_smoke.sh  run_cpu_reference_smoke.sh  run_glm5_pd_gpu.sh
(+56 files in other folders)
