[package]
name = "sglang-srt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sglang_srt"
path = "src/lib.rs"

[features]
default = []
mooncake-link = []

[dependencies]
axum = "0.8.9"
prost = "0.14.3"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-reflection = "0.14.6"
serde_json = "1"
tokenizers = "0.23.1"
rand = "0.10.1"

[build-dependencies]
tonic-prost-build = "0.14.6"
