[package]
name = "sglang-srt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sglang_srt"
path = "src/lib.rs"

[features]
default = []
mooncake-link = []

[dependencies]
axum = "0.8.9"
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-reflection = "0.14.6"
serde_json = "1"
tokenizers = "0.23.1"
rand = "0.10.1"
zeromq = "0.6.0"
sha2 = "0.11.0"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq", "rustls-tls"] }
minijinja = { version = "2.21.0", features = ["json"] }
minijinja-contrib = { version = "2.21.0", features = ["pycompat"] }
nexus-transfer = { git = "https://github.com/imReese/NexusKV.git", rev = "c7bdc6891672c051491813b17a08700b217bee3e" }
sglang-kernel = { version = "0.1.0", path = "../sglang-kernel" }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"
